syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Fermekoo/game-store/pb";

message Order {
    uint32 order_id = 1;
	string service_code = 2;
	string account_id = 3;
	string account_zone = 4;
	uint32 total_price = 5;
	uint32 price = 6;
	uint32 fee = 7;
	string status = 8;
	google.protobuf.Timestamp created_at = 9;
	google.protobuf.Timestamp updated_at = 10;
}