syntax = "proto3";

package pb;

import "order.proto";

option go_package = "github.com/Fermekoo/game-store/pb";

message OrderCallRequest {
    string service = 1;
    string account_id = 2;
    string account_zone = 3;
    string payment_method = 4;
    string phone = 5;
    string name = 6;
}

message OrderResponse {
    bool result = 1;
    string message = 2;
    Order data = 3;
}